welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:28: error: not found: value ecrit
    ecrit Message(cpt)
    ^